# taic

./: .gitignore  .gitmodules  Makefile  README.md  taic-ppt.pptx
docs/: micro-bench.md  taic-guide.md  tokio.md
results/ipc-bench/: ipc-bench.md  parse.py  taic.gnuplot
results/ipc-bench/raw/: eventfd.res  pipe.res  signal.res  taic-bi-uint.res  taic-bi.res  taic-uni-uint.res  taic-uni.res
results/ipc-bench/stat/: eventfd.res  pipe.res  signal.res  taic-bi-uint.res  taic-bi.res  taic-uni-uint.res  taic-uni.res
results/tokio-scheduling-taic/criterion/chained_spawn/base/: benchmark.json  tukey.json
results/tokio-scheduling-taic/criterion/chained_spawn/change/: estimates.json
results/tokio-scheduling-taic/criterion/chained_spawn/new/: estimates.json  sample.json
results/tokio-scheduling-taic/criterion/chained_spawn/report/: index.html
results/tokio-scheduling-taic/criterion/ping_pong/base/: benchmark.json  estimates.json  sample.json
results/tokio-scheduling-taic/criterion/ping_pong/change/: estimates.json
results/tokio-scheduling-taic/criterion/ping_pong/new/: tukey.json
results/tokio-scheduling-taic/criterion/ping_pong/report/: index.html
results/tokio-scheduling-taic/criterion/report/: index.html
results/tokio-scheduling-taic/criterion/spawn_many_local/base/: benchmark.json  estimates.json  sample.json  tukey.json
results/tokio-scheduling-taic/criterion/spawn_many_local/change/: estimates.json
results/tokio-scheduling-taic/criterion/spawn_many_local/report/: index.html
results/tokio-scheduling-taic/criterion/spawn_many_remote_busy1/base/: sample.json  tukey.json
scripts/: fpga.mk  opensbi.mk  qemu.mk
taic-driver/: Cargo.toml
taic-driver/src/: lib.rs  lq.rs
taic-pac/: taic.svd
taic-pac/src/: taic.rs
taic-pac/src/taic/: lq_.rs
taic-qemu-test/: Cargo.toml  Makefile  rust-toolchain.toml
taic-qemu-test/apps/indices_test/: Cargo.toml  indices_test_riscv64-qemu-virt.elf
taic-qemu-test/apps/indices_test/src/: main.rs
taic-test/: Cargo.toml  Makefile  README.md  build_img.sh  parse_result.py  rust-toolchain.toml
taic-test/.cargo/: config.toml
taic-test/apps/enq_deq_test/: Cargo.toml
taic-test/apps/enq_deq_test/src/: main.rs
taic-test/apps/multi_soft/: Cargo.toml
taic-test/apps/multi_soft/src/: main.rs
taic-test/apps/sextint_latency/: Cargo.toml
taic-test/apps/sextint_latency/src/: main.rs
taic-test/apps/sintcontext/: Cargo.toml
taic-test/apps/sintcontext/src/: main.rs
taic-test/apps/ssoftint_latency/: Cargo.toml
taic-test/apps/ssoftint_latency/src/: main.rs
taic-test/apps/taic_test/: Cargo.toml
taic-test/apps/taic_test/src/: main.rs
taic-test/apps/user_sint/: Cargo.toml
taic-test/apps/user_sint/src/: main.rs
taic-test/apps/user_test/: Cargo.toml
taic-test/apps/user_test/src/: main.rs
taic-test/modules/axhal/: Cargo.toml
taic-test/modules/axhal/src/: lib.rs  mem.rs
taic-test/modules/axhal/src/arch/riscv/: context.rs
taic-test/modules/axhal/src/platform/riscv64_qemu_virt/: irq.rs
taic-test/modules/axhal/src/platform/x86_pc/: time.rs
taic-test/modules/axtrap/: Cargo.toml
taic-test/modules/axtrap/src/: lib.rs
taic-test/modules/axtrap/src/arch/riscv/: mod.rs  trap.S
taic-test/scripts/make/: cargo.mk  features.mk  qemu.mk
taic-test/testcases/: user_enq_deq  user_extint_latency  user_int_context  user_softint_latency
taic-test/utestcases/: Cargo.toml  Makefile
taic-test/utestcases/.cargo/: config.toml
taic-test/utestcases/src/: lib.rs  trap.S  trap.rs
(+16 files in other folders)
