[patch."https://github.com/Starry-OS/axhal.git".axhal]
path = "modules/axhal"

[patch."https://github.com/Starry-OS/axtrap.git".axtrap]
path = "modules/axtrap"

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = [
    "apps/enq_deq_test",
    "apps/sextint_latency",
    "apps/sintcontext",
    "apps/ssoftint_latency",
    "apps/user_test",
    "apps/user_sint",
    "utestcases",
]
resolver = "2"
