[package]
name = "utestcases"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
taic-driver = { path = "../../taic-driver" }
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
    "inline-asm",
] }
axhal = { git = "https://github.com/Starry-OS/axhal.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
handler_table = { git = "https://github.com/Starry-OS/handler_table.git" }
log = "0.4"
