[package]
name = "sextint_latency"
version = "0.1.0"
edition = "2021"

[dependencies]
axstd = { git = "https://github.com/Starry-OS/axstd.git", features = ["paging", "alloc", "irq"] }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
log = "0.4"
taic-driver = { path = "../../../taic-driver" }
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
    "inline-asm",
] }
axhal = { git = "https://github.com/Starry-OS/axhal.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
